*relative header container,links:hover, nav z-index

--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ nav{
     width: 100%;
     position: sticky;
     top: 0;
+    z-index: 1;
 }
 
 .nav-left{
@@ -58,6 +59,37 @@ nav{
     background-repeat: no-repeat;
     background-position-x: right;
     padding-top: 60px;
+}
+.rel-header{
+    padding: 24px;
+    box-shadow: 6px 6px 0 0 #fff100;
+    max-width: 882px;
+    position: relative;
+    top: -75px;
+    left: 100px;
+    background-color: white;
+}
+.list-header li{
+    display: inline-flex;
+    align-items: center;
+}
+.link-header{
+    color: black;
+    font-family: 'Oswald', sans-serif;
+    letter-spacing: 1px;
+    display: inline-block;
+}
+.link-header:hover {
+    border-bottom: solid black 1px;
+}
+.description-cont h1{
+    font-size: 36px;
+    margin-top: 16px;
+}
+.description-cont p{
+    font-size: 16px;
+    margin-top: 8px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 .container{
     width: 80%;
@@ -159,6 +191,9 @@ nav{
 }
 .links{
     margin-bottom: 2em;
+}
+.list li a:hover {
+    border-bottom: solid black 1px;
 }
 footer{
     
