--- a/style.css
+++ b/style.css
@@ -12,7 +12,6 @@ nav{
     background-color: white;
     box-shadow: 0 2px 6px 0 rgba(0,0,0,0.15);
     padding: 10px 24px;
-    width: 100%;
     position: sticky;
     top: 0;
     z-index: 1;
@@ -38,6 +37,7 @@ nav{
     font-size: 14px;
     color: black;
 }
+
 .nav-right ul a{
     display: inline-block;
     padding: 6px 12px;
@@ -63,11 +63,10 @@ nav{
 .rel-header{
     padding: 24px;
     box-shadow: 6px 6px 0 0 #fff100;
-    max-width: 882px;
     position: relative;
     top: -75px;
-    left: 100px;
     background-color: white;
+    
 }
 .list-header li{
     display: inline-flex;
@@ -173,15 +172,14 @@ nav{
     justify-content: center;
     max-width: 1100px;
     
+    
 }
 .footer-posts section{
     display: block;
-    min-width: 15em;
-    flex: 0 0 33%; 
+    flex: 0 0 33%;
 }
 .title2{
-    margin: 0 0 16px;
-    
+    margin: 0 0 16px;  
 }
 .list li {
     padding-bottom: 16px;
@@ -216,4 +214,37 @@ footer div{
 }
 .a-footer:hover{
     border: 3px solid #fff100;
+}
+
+@media only screen and (max-width: 100vw) {
+    .rel-header{
+        max-width: 882px;
+        margin: 0 94px;
+    }
+}
+
+@media only screen and (max-width: 845px) {
+    .link{
+        display: none;
+    }
+    .rel-header{
+        max-width: 430px;
+        margin: 0 48px;
+    }
+    .footer-posts {
+        flex-direction: column;
+    }
+    .footer-posts section {
+        border-right: none;
+    }
+}
+
+@media only screen and (max-width: 500px) {
+    .link{
+        display: none;
+    }
+    .rel-header{
+        max-width: 352px;
+        margin: 0 24px;
+    }
 }
